--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,15 +12,18 @@ jobs:
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:8.0
         env:
-          MYSQL_USER: user1
+          MYSQL_USER: root
           MYSQL_ROOT_PASSWORD: ma123
           MYSQL_DATABASE: usersdb
         ports:
           - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
+    - name: Configure MySQL permissions
+      run: mysql -h 127.0.0.1 --port 3306 -u root -pma123 -e "ALTER USER 'root'@'%' IDENTIFIED BY 'ma123'; GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'; FLUSH PRIVILEGES;"
     - uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v1
@@ -28,11 +31,9 @@ jobs:
         node-version: '18'
     - name: Install dependencies
       run: npm install
-    - name: Start MySQL
-      run: /etc/init.d/mysql start
     - name: Install client mysql
       run: apt install mysql-client
     - name: Criar Tabelas
-      run: mysql - h localhost -u user1 -p mamae@123 usersdb < estrutura.sql
+      run: mysql -h 127.0.0.1 --port3306 -u root -p mamae@123 usersdb < estrutura.sql
     - name: Run tests
       run: npm test
