--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Install client mysql
-      run: apt install mysql-client
+      run: sudo apt install mysql-client
     - name: Criar Tabelas
       run: mysql -h 127.0.0.1 --port3306 -u root -p ma123 usersdb < estrutura.sql
     - name: Run tests
