--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: ma123
+          MYSQL_ROOT_PASSWORD: mamae123
           MYSQL_DATABASE: usersdb
         ports:
           - 3306:3306
@@ -22,7 +22,7 @@ jobs:
 
     steps:
     - name: Configure MySQL permissions
-      run: mysql -h 127.0.0.1 --port 3306 -u root -pma123 -e "ALTER USER 'root'@'%' IDENTIFIED BY 'ma123'; GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'; FLUSH PRIVILEGES;"
+      run: mysql -h 127.0.0.1 --port 3306 -u root -pmamae123 -e "ALTER USER 'root'@'%' IDENTIFIED BY 'mamae123'; GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'; FLUSH PRIVILEGES;"
     - uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v1
@@ -33,10 +33,10 @@ jobs:
     - name: Install client mysql
       run: sudo apt install mysql-client
     - name: Criar Tabelas
-      run: mysql -h 127.0.0.1 --port3306 -u root -pma123 usersdb < estrutura.sql
+      run: mysql -h 127.0.0.1 --port3306 -u root -pmamae123 usersdb < estrutura.sql
     - name: Run tests
       env:
         MYSQL_USER: root
-        MYSQL_ROOT_PASSWORD: ma123
+        MYSQL_ROOT_PASSWORD: mamae123
         MYSQL_DATABASE: usersdb
       run: npm test
