--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install client mysql
       run: sudo apt install mysql-client
     - name: Criar Tabelas
-      run: mysql -h 127.0.0.1 --port 3306 -u root -pmamae123 teste < estrutura.sql
+      run: mysql -h 127.0.0.1 --port 3306 -u root -pmamae123 usersdb < estrutura.sql
     - name: Teste
       env:
         MYSQL_USER: root
